--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="login">登录</string>
     <string name="loading">正在加载数据</string>
     <string name="register">注册</string>
+    <string name="title_activity_city_list">CityListActivity</string>
 </resources>
